# LillyMol

./: Build.md  Dockerfile  Makefile  README.md  install.sh
src/: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  WORKSPACE  add_homebrew_to_module_bazel.py  add_homebrew_to_module_bazel.sh  build_linux.sh  build_macos.zsh  build_third_party.sh  copy_shared_libraries.sh  install.sh  install_binaries.sh  run_python_unit_tests.sh  t.jl  uncompress_and_install.sh  uninstall.sh  update_python_in_module_bazel.py
src/BerkeleyDB/: BUILD  CMakeLists.txt  enough_inventory_bdb.cc  iwbdb_compare.cc  iwbdb_delete.cc  iwbdb_exists.cc  iwbdb_fetch.cc  iwbdb_list.cc  iwbdb_load.cc  iwbdb_merge_into_tdt.cc  iwstring_bdb.cc  iwstring_bdb.h  unpack_data.cc
src/Duplicates/: BUILD  topological_torsion_main.cc
src/Foundational/: CMakeLists.txt
src/Foundational/accumulator/: BUILD  CMakeLists.txt  accumulator.h
src/Foundational/cmdline/: BUILD  CMakeLists.txt
src/Foundational/cmdline_v2/: BUILD  CMakeLists.txt  cmdline.cc
src/Foundational/data_source/: BUILD  CMakeLists.txt  iwmmap.cc  iwmmap.h  iwrecordio.cc  iwrecordio.h  iwstring_data_source.cc  iwstring_data_source.h  test_tfdata_record.cc  tfdatarecord.cc  tfdatarecord.h  tiwds.cc
src/Foundational/histogram/: BUILD  CMakeLists.txt  resizable_histogram_.h
src/Foundational/iw_tdt/: BUILD  CMakeLists.txt  fetch_tdt.cc  fetch_tdt_quick.cc  iw_tdt.cc  iw_tdt.h  tdt_join.cc  tdt_sort.cc  tdt_stats.cc
src/Foundational/iwaray/: BUILD  CMakeLists.txt  iwaray.h
src/Foundational/iwbits/: BUILD  CMakeLists.txt  bits_in_common_avx.cc  fixed_bit_vector.cc  iwbits.h  popcount.h  tbic.cc
src/Foundational/iwmisc/: BUILD  CMakeLists.txt  activity_data_from_file.h  iw_tabular_data.cc  iw_tabular_data.h  iwdigits.cc  matcher.h  misc.h  normalisation.cc  normalisation.h  proto_support.h  sparse_fp_creator.cc  sparse_fp_creator.h  test_iwdigits.cc
src/Foundational/iwqsort/: BUILD  CMakeLists.txt  iwqsort.h  test_iwqsort_fo.cc
src/Foundational/iwstring/: BUILD  CMakeLists.txt  IWString_class.cc  bdb.cc  iwstring.h  iwstring_and_file_descriptor.cc  test_zstd.cc  (+7 more)
src/ILPD/: BUILD  ilpd_reduced_graph.cc
src/Molecule_Lib/: BUILD  CMakeLists.txt  ISIS_Atom_List.cc  allowed_elements.cc  allowed_elements.h  aromatic.cc  aromatic_test.cc  atom.cc  atom.h  atom_pair_fingerprint.cc  atom_pair_fingerprint.h  atom_typing.cc  atom_typing.h  atom_typing_test.cc  bond.cc  charge_assigner.cc  charge_assigner.h  charge_calculation.cc  charmm.cc  chiral_centre.cc  cis_trans_bond.cc  count_atoms_in_smiles.cc  create_components.h  csv.cc  dihedral.cc  donor_acceptor.cc  donor_acceptor.h  donor_acceptor.proto  donor_acceptor_test.cc  down_the_bond.cc  ematch.cc  ematch.h  frag.cc  geometric_constraints.h  is_actually_chiral.cc  is_actually_chiral_test.cc  istream_and_type.h  iwmfingerprint.cc  iwmfingerprint.h  iwmtypes.h  (+77 more)
src/Molecule_Tools/: BUILD  CMakeLists.txt  SAFE_generate.cc  SAFE_replacement.cc  abraham.cc  activity_consistency.cc  aggregate_replacement_rings.cc  align_molecule.cc  alogp.cc  alogp.h  alogp_main.cc  alogp_test.cc  atom_pair_fingerprint_main.cc  atom_triples.cc  atomic_distance_fingerprint.cc  bump_check.cc  centroid_atoms.cc  charge_fingerprint.cc  chirality_fingerprint.cc  circular_fingerprint.cc  circular_fingerprint.h  common_names.cc  complex_chirality.cc  confs2indices.cc  contiguous_atoms.cc  contiguous_atoms.h  dbf.cc  dicer.cc  dicer_api.cc  dicer_api.h  dicer_fragment_activity.cc  dicer_fragment_overlap.cc  dicer_fragment_replace.cc  dicer_fragments.proto  dicer_mcs.cc  dicer_to_topological_types.cc  e_state_computation_procedure.cc  e_state_computation_procedure.h  e_state_computation_procedure_ori.cc  ec_fingerprint.cc  (+204 more)
src/Molecule_Tools_Bdb/: BUILD  buildsmidb_bdb.cc  conformer_database.proto  conformer_database_lookup.cc  conformer_database_store.cc  dicer2bdb.cc  dicer_fragment_complement_replace.cc  dicer_fragment_lookup_bdb.cc  dicer_to_complemenent_db.cc  in_database_bdb.cc  in_lilly_database_bdb.cc  iwecfp_database_load.cc  iwecfp_database_lookup.cc  iwecfp_database_lookup_lib.cc  iwecfp_database_lookup_lib.h  qupkake_transfer.cc  smi2rings_bdb.cc  smi2rings_bdb_lib.cc  structure_database_lookup.cc  substituent_identification.cc  substituent_identification.proto  substituent_identification_extract.cc
src/Obsolete/: BUILD  CMakeLists.txt  concat_files_large_memory.cc  confusion_matrix.cc  descriptor_file_same_row_order.cc  descriptor_file_to_01_fingerprints.cc  descriptor_file_to_mahalanobis_gfp.cc  descriptor_file_to_molecular_properties.cc  diff_line_by_line.cc  element_density.cc  fingerprint_weights_to_atom_colours.cc  gfp_bit_filter.cc  gfp_difference_fingerprint.cc  gfp_distance_matrix_iwdm.cc  gfp_evaluate_clustering.cc  gfp_group_spread.cc  gfp_leader_opt_v2.cc  gfp_leader_threaded.cc  gfp_linear_model.cc  gfp_linear_model_optimise.cc  gfp_naive_bayesian_multiclass.cc  gfp_proximity_descriptors.cc  gfp_spread_standard_cilk.cc  gfp_spread_standard_threaded.cc  gfp_spread_standard_threaded_mc.cc  gfp_spread_threaded.cc  gfp_vector_differences.cc  isolation_forest.cc  molecule_pca.cc  nn_identify_active_outliers.cc  rearrange_columns.cc  ring_combinations.cc  rocs_rpt2nn.cc  selimsteg_build.cc  test_train_split_evaluate.cc  test_train_split_evaluate_int.cc  zero_pad.cc
src/Retrosynthesis/: BUILD  retrosynthesis.cc  retrosynthesis.h  retrosynthesis.proto  retrosynthesis_main.cc
src/build_deps/: install.bzl
src/julia/: BUILD  LillyMol.jl  lillymol.cc  lillymol_test.jl
src/pybind/: BUILD  gfp_http_client_test.py  gfp_http_server_test.py  lillymol_dicer_test.py  lillymol_fingerprint_test.py  lillymol_pybind.cc  lillymol_pybind_fingerprint.cc  lillymol_pybind_gfp_server.cc  lillymol_pybind_io.cc  lillymol_pybind_query.cc  lillymol_pybind_reaction.cc  lillymol_pybind_tools.cc  lillymol_pybind_tsubstructure.cc  lillymol_reaction_test.py  lillymol_ring_replacement_test.py  lillymol_test.py  lillymol_tools_iwdescr_test.py  tsubstructure.cc
src/xgboost/: BUILD  xgboost_model.proto  xgboost_model_evaluate.cc
(+941 files in other folders)
