add_subdirectory(iwmisc)
add_subdirectory(iwaray)
add_subdirectory(iwstring)
add_subdirectory(cmdline)
add_subdirectory(cmdline_v2)
add_subdirectory(accumulator)
add_subdirectory(data_source)
add_subdirectory(iw_tdt)
add_subdirectory(iwqsort)
add_subdirectory(jama)
add_subdirectory(tnt)
add_subdirectory(xmlParser)
add_subdirectory(iwbits)
add_subdirectory(histogram)
